add some function

--- a/code/ai-do/ai-do-ci-in-smoking/ai-do-smoking.ipynb
+++ b/code/ai-do/ai-do-ci-in-smoking/ai-do-smoking.ipynb
@@ -246,7 +246,7 @@
     "(\n",
     "    id integer primary key , \n",
     "    path varchar(255) unique , \n",
-    "    estimate_feature varchar(50) , \n",
+    "    feature varchar(50) , \n",
     "    mts_a real , \n",
     "    mts_b real , \n",
     "    mts_mean real , \n",
@@ -392,6 +392,13 @@
     "        self.file_paths = []\n",
     "        self.comment = \"\"\n",
     "        self.estimate_feature = \"\"\n",
+    "    pass\n",
+    "\n",
+    "class Feedback():\n",
+    "    def __init__():\n",
+    "        self.commit_id = None\n",
+    "        self.feature = None\n",
+    "        self.consistensy = 0\n",
     "    pass"
    ]
   },
@@ -514,25 +521,166 @@
     "    sqlite.exec_sql(sql_update_priori_distribution)\n",
     "    pass\n",
     "\n",
-    "def init_estimate_distribution():\n",
+    "def init_estimate_distribution(code_path=\"code-smoking\", sqlite=None):\n",
     "    # 从code_sturct直接初始化 estimate_distribution\n",
-    "    # 从priori_distribution初始化 estimate_distribution\n",
+    "    sql_insert_estimate_distribution = \"\"\"\n",
+    "    insert or replace into estimate_distribution \n",
+    "    (\n",
+    "    id ,path ,feature ,mts_a ,mts_b ,mts_mean ,signal_a ,signal_b , \n",
+    "    signal_mean ,rct_a ,rct_b ,rct_mean ,kpi_a ,kpi_b ,kpi_mean \n",
+    "    )\n",
+    "    values \n",
+    "    \"\"\"\n",
+    "    fg = walk_code_dir(path)\n",
+    "    while True:\n",
+    "            struct = next(fg)\n",
+    "            if struct is None:\n",
+    "                break\n",
+    "            _, file_type, root, _, path = struct\n",
+    "            is_file = (file_type == 'file' ? 1 : 0)\n",
+    "            \n",
+    "            if is_file == 1:\n",
+    "                sql_insert_estimate_distribution += \"\"\"\n",
+    "                (\n",
+    "                null ,'%s' ,null ,%s ,%s ,%s ,%s ,%s , \n",
+    "                %s ,%s ,%s ,%s ,%s ,%s ,%s \n",
+    "                )\n",
+    "                ,\"\"\" % (path ,1 ,1 ,1 ,1 ,1 , \n",
+    "                        1 ,1 ,1 ,1 ,1 ,1 ,1 \n",
+    "                       )\n",
+    "    sql_insert_estimate_distribution += sql_insert_estimate_distribution[0:-1] + \";\"\n",
+    "    sqlite.exe_sql(sql_insert_estimate_distribution)    \n",
     "    pass\n",
     "\n",
-    "def update_priori_to_estimate_distribution():\n",
-    "    # 更新\n",
+    "\n",
+    "def update_priori_to_estimate_distribution(code_path=\"code-smoking\", sqlite=None):\n",
+    "    # 从priori_distribution更新 estimate_distribution\n",
+    "    sql_insert_estimate_distribution = \"\"\"\n",
+    "    insert or replace into estimate_distribution \n",
+    "    (\n",
+    "    path ,mts_a ,mts_b ,signal_a ,signal_b ,rct_a ,rct_b ,kpi_a ,kpi_b \n",
+    "    )\n",
+    "    values \n",
+    "    \"\"\"\n",
+    "    sql_select_from_priori_distribution = \"\"\"\n",
+    "    select * from priori_distribution;\n",
+    "    \"\"\"\n",
+    "    priori_distribution = sqlite.exe_sql(sql_select_from_priori_distribution) \n",
+    "    for prd in priori_distribution:\n",
+    "        path, feature = prd['path'], prd['feature']\n",
+    "        mts_a ,mts_b ,signal_a ,signal_b ,rct_a ,rct_b ,kpi_a ,kpi_b = 1, 1, 1, 1, 1, 1, 1,1\n",
+    "        if feature == \"mts\":\n",
+    "            mts_a = 11\n",
+    "        if feature == \"signal\":\n",
+    "            signal_a = 11\n",
+    "        if feature == \"rct\":\n",
+    "            rct_a = 11\n",
+    "        if feature == \"kpi\":\n",
+    "            kpi_a = 11\n",
+    "        \n",
+    "        sql_insert_estimate_distribution += \"\"\"\n",
+    "        (\n",
+    "        %s , %s , %s , %s , %s , %s , %s , %s , %s \n",
+    "        )\n",
+    "        ,\"\"\" % (path , mts_a , mts_b , signal_a , signal_b , rct_a , rct_b , kpi_a , kpi_b)\n",
+    "    sql_insert_estimate_distribution += sql_insert_estimate_distribution[0:-1] + \";\"\n",
+    "    sqlite.exe_sql(sql_insert_estimate_distribution)    \n",
     "    pass\n",
     "\n",
-    "def update_estimate_from_human_feedback():\n",
+    "def update_estimate_from_human_feedback(path=None, feature=None):\n",
+    "    # 从人类反馈中更新 estimate_distribution\n",
+    "    sql_insert_estimate_distribution = \"\"\"\n",
+    "    insert or replace into estimate_distribution \n",
+    "    (\n",
+    "    path ,mts_a ,mts_b ,signal_a ,signal_b ,rct_a ,rct_b ,kpi_a ,kpi_b \n",
+    "    )\n",
+    "    values \n",
+    "    \"\"\"\n",
+    "    mts_a ,mts_b ,signal_a ,signal_b ,rct_a ,rct_b ,kpi_a ,kpi_b = 1, 1, 1, 1, 1, 1, 1,1\n",
+    "    if feature == \"mts\":\n",
+    "        mts_a = 11\n",
+    "    if feature == \"signal\":\n",
+    "        signal_a = 11\n",
+    "    if feature == \"rct\":\n",
+    "        rct_a = 11\n",
+    "    if feature == \"kpi\":\n",
+    "        kpi_a = 11\n",
+    "    \n",
+    "    sql_insert_estimate_distribution += \"\"\"\n",
+    "    (%s , %s , %s , %s , %s , %s , %s , %s , %s )\n",
+    "    ;\"\"\" % (path , mts_a , mts_b , signal_a , signal_b , rct_a , rct_b , kpi_a , kpi_b)\n",
+    "    sqlite.exe_sql(sql_insert_estimate_distribution)\n",
     "    pass\n",
     "\n",
-    "def update_estimate_from_result():\n",
+    "def save_commit(commit=None, sqlite=None):\n",
+    "    # 保存commit\n",
+    "    create table commit_history \n",
+    "(\n",
+    "    id integer primary key , \n",
+    "    commit_id varchar(255) unique , \n",
+    "    time datetime , \n",
+    "    branch varchar(50) , \n",
+    "    author varchar(50) , \n",
+    "    comment text , \n",
+    "    path varchar(255) , \n",
+    "    estimate_feature varchar(50) , \n",
+    "    feedback_human varchar(50) , \n",
+    "    feedback_result varchar(50) \n",
+    ");\n",
+    "\n",
+    "\n",
     "    pass\n",
     "\n",
-    "def get_freq_distance_from_commit_hsitory():\n",
+    "def save_human_feedback(commit=None, featrue=\"\", consistensy=0):\n",
+    "    # 保存人类对commit的直接反馈\n",
+    "    \n",
+    "    create table human_feedback_distribution \n",
+    "(\n",
+    "   id integer primary key , \n",
+    "   commit_id varchar(255) unique , \n",
+    "   time datetime , \n",
+    "   branch varchar(50) , \n",
+    "   author varchar(50) , \n",
+    "   comment text , \n",
+    "   path varchar(255) , \n",
+    "   estimate_feature varchar(50) , \n",
+    "   human_feedback_feature varchar(50) , \n",
+    "   estimate_feedback_consistensy int , \n",
+    "   human_feedback_time datetime \n",
+    ");\n",
+    "    self.commit_id = None\n",
+    "        self.time = None\n",
+    "        self.branch = None\n",
+    "        self.author = None\n",
+    "        self.file_paths = []\n",
+    "        self.comment = \"\"\n",
+    "        self.estimate_feature = \"\"\n",
+    "    pass\n",
+    "\n",
+    "def update_estimate_from_result(commit_id=\"\", feedback=\"\", sqlite=None):\n",
+    "    # 根据commit_id查找相应的估计feature,和相应文件\n",
+    "    # 更新相关文件的反馈值\n",
+    "    \n",
+    "    pass\n",
+    "\n",
+    "def get_file_freq_distance_from_commit_hsitory():\n",
+    "    # 从提交历史中获得文件之间的提交频率距离\n",
     "    pass\n",
     "\n",
     "def decision_naive_bayes(commit=None):\n",
+    "    # 朴素贝叶斯决策\n",
+    "    # 从esitmate_distribution中得到\n",
+    "    self.commit_id = None\n",
+    "        self.time = None\n",
+    "        self.branch = None\n",
+    "        self.author = None\n",
+    "        self.file_paths = []\n",
+    "        self.comment = \"\"\n",
+    "        self.estimate_feature = \"\"\n",
+    "    pass\n",
+    "\n",
+    "def update_decision_to_commit():\n",
+    "    # 将贝叶斯的预测结果更新到commit历史表的feature字段\n",
     "    pass\n"
    ]
   },
