add bayes decison

--- a/code/ai-do/ai-do-ci-in-smoking/ai-do-smoking.ipynb
+++ b/code/ai-do/ai-do-ci-in-smoking/ai-do-smoking.ipynb
@@ -45,7 +45,8 @@
     "import sys\n",
     "import os\n",
     "import random\n",
-    "import shutil\n"
+    "import shutil\n",
+    "import time\n"
    ]
   },
   {
@@ -293,7 +294,7 @@
     ");\n",
     "\"\"\"\n",
     "sql_create_freq_distance = \"\"\"\n",
-    "create table commit_distribution \n",
+    "create table freq_distance \n",
     "(\n",
     "    id integer primary key , \n",
     "    author varchar(50), \n",
@@ -568,7 +569,7 @@
     "    priori_distribution = sqlite.exe_sql(sql_select_from_priori_distribution) \n",
     "    for prd in priori_distribution:\n",
     "        path, feature = prd['path'], prd['feature']\n",
-    "        mts_a ,mts_b ,signal_a ,signal_b ,rct_a ,rct_b ,kpi_a ,kpi_b = 1, 1, 1, 1, 1, 1, 1,1\n",
+    "        mts_a ,mts_b ,signal_a ,signal_b ,rct_a ,rct_b ,kpi_a ,kpi_b = 1, 1, 1, 1, 1, 1, 1, 1\n",
     "        if feature == \"mts\":\n",
     "            mts_a = 11\n",
     "        if feature == \"signal\":\n",
@@ -612,76 +613,231 @@
     "    sqlite.exe_sql(sql_insert_estimate_distribution)\n",
     "    pass\n",
     "\n",
-    "def save_commit(commit=None, sqlite=None):\n",
+    "def save_commit(commits=None, sqlite=None):\n",
     "    # 保存commit\n",
-    "    create table commit_history \n",
-    "(\n",
-    "    id integer primary key , \n",
-    "    commit_id varchar(255) unique , \n",
-    "    time datetime , \n",
-    "    branch varchar(50) , \n",
-    "    author varchar(50) , \n",
-    "    comment text , \n",
-    "    path varchar(255) , \n",
-    "    estimate_feature varchar(50) , \n",
-    "    feedback_human varchar(50) , \n",
-    "    feedback_result varchar(50) \n",
-    ");\n",
-    "\n",
-    "\n",
+    "    sql_insert_commit_history = \"\"\"\n",
+    "    insert or replace into commit_history \n",
+    "    (\n",
+    "    id ,commit_id ,time ,branch ,author ,comment ,path ,estimate_feature ,feedback_human ,feedback_result\n",
+    "    )\n",
+    "    values \n",
+    "    \"\"\"\n",
+    "    for commit in commits:\n",
+    "        commit_id = commit.commit_id\n",
+    "        time = commit.time\n",
+    "        branch = commit.branch\n",
+    "        author  = commit.author\n",
+    "        comment = commit.comment\n",
+    "        estimate_feature = \"\"\n",
+    "        feedback_human = \"\"\n",
+    "        feedback_result = \"\"\n",
+    "        for path in commit.file_paths:\n",
+    "            sql_insert_commit_history += \"\"\"\n",
+    "            (null, '%s', '%s', '%s', '%s', '%s', '%s', '%s', '%s', '%s' )\n",
+    "            ,\"\"\" % (commit_id ,time ,branch ,author ,comment ,path ,estimate_feature ,feedback_human ,feedback_result)\n",
+    "    \n",
+    "    sql_insert_commit_history += sql_insert_commit_history[0:-1] + \";\"\n",
+    "    sqlite.exe_sql(sql_insert_commit_history)\n",
     "    pass\n",
     "\n",
-    "def save_human_feedback(commit=None, featrue=\"\", consistensy=0):\n",
+    "def save_human_feedback(commit_id=None, featrue=\"\", consistensy=0):\n",
     "    # 保存人类对commit的直接反馈\n",
+    "    # 根据id从commit_history中查找到该提交的信息\n",
+    "    sql_insert_human_feedback_distribution = \"\"\"\n",
+    "    insert or replace into human_feedback_distribution \n",
+    "    (\n",
+    "    id ,commit_id ,time ,branch ,author ,comment ,path ,estimate_feature ,\n",
+    "    human_feedback_feature ,estimate_feedback_consistensy ,human_feedback_time  \n",
+    "    )\n",
+    "    values \n",
+    "    \"\"\"\n",
+    "    sql_select_from_commit_history = \"\"\"\n",
+    "    select * from commit_history where commit_id='%s';\n",
+    "    \"\"\" % commit_id\n",
+    "    result = sqlite.exec_sql(sql_select_from_commit_history)\n",
+    "    if result is not None and len(result) > 0:\n",
+    "        for res in result:\n",
+    "            commit_id = res['commit_id']\n",
+    "            time = res['time']\n",
+    "            branch = res['branch']\n",
+    "            author = res['author']\n",
+    "            comment = res['comment']\n",
+    "            path = res['path']\n",
+    "            estimate_feature = res[estimate_feature]\n",
+    "#             feedback_human = res[feedback_human]\n",
+    "#             feedback_result = res[feedback_result]\n",
+    "            human_feedback_feature = featrue\n",
+    "            human_feedback_time = time.strftime('%Y-%m-%d %H:%M:%S',time.localtime(time.time()))\n",
+    "            estimate_feedback_consistensy = (estimate_feature == human_feedback_feature) ? 1 : 0\n",
+    "            # 进行保存\n",
+    "            sql_insert_human_feedback_distribution += \"\"\"\n",
+    "            (null, '%s', '%s', '%s', '%s', '%s', '%s', '%s', '%s', '%s', '%s')\n",
+    "            ,\"\"\" % (commit_id ,time ,branch ,author ,comment ,path ,estimate_feature ,\n",
+    "                    human_feedback_feature ,estimate_feedback_consistensy ,human_feedback_time)\n",
     "    \n",
-    "    create table human_feedback_distribution \n",
-    "(\n",
-    "   id integer primary key , \n",
-    "   commit_id varchar(255) unique , \n",
-    "   time datetime , \n",
-    "   branch varchar(50) , \n",
-    "   author varchar(50) , \n",
-    "   comment text , \n",
-    "   path varchar(255) , \n",
-    "   estimate_feature varchar(50) , \n",
-    "   human_feedback_feature varchar(50) , \n",
-    "   estimate_feedback_consistensy int , \n",
-    "   human_feedback_time datetime \n",
-    ");\n",
-    "    self.commit_id = None\n",
-    "        self.time = None\n",
-    "        self.branch = None\n",
-    "        self.author = None\n",
-    "        self.file_paths = []\n",
-    "        self.comment = \"\"\n",
-    "        self.estimate_feature = \"\"\n",
+    "    sql_insert_human_feedback_distribution += sql_insert_human_feedback_distribution[0:-1] + \";\"\n",
+    "    sqlite.exe_sql(sql_insert_human_feedback_distribution)\n",
     "    pass\n",
     "\n",
     "def update_estimate_from_result(commit_id=\"\", feedback=\"\", sqlite=None):\n",
     "    # 根据commit_id查找相应的估计feature,和相应文件\n",
     "    # 更新相关文件的反馈值\n",
+    "    pass\n",
+    "\n",
+    "def init_file_freq_distance_from_commit_hsitory(file_paths=[]):\n",
+    "    # 初始化文件之间的提交频率距离\n",
+    "    sql_insert_freq_distance = \"\"\"\n",
+    "    insert or replace into freq_distance \n",
+    "    (\n",
+    "    id, author, path_base, path_join, freq  \n",
+    "    )\n",
+    "    values \n",
+    "    \"\"\"\n",
+    "    for path_base in file_paths:\n",
+    "        for path_join in file_paths:\n",
+    "            pass\n",
+    "    pass\n",
+    "\n",
+    "def update_file_freq_distance_from_commit(commit=None):\n",
+    "    # 从提交中update文件之间的提交频率距离\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "def estimate_class_distribution(estimate_distribution={}):\n",
+    "    ed = {}\n",
+    "#     path = estimate_distribution['path']\n",
+    "    mts_a = estimate_distribution['mts_a']\n",
+    "    mts_b = estimate_distribution['mts_b']\n",
+    "    signal_a = estimate_distribution['signal_a']\n",
+    "    signal_b = estimate_distribution['signal_b']\n",
+    "    rct_a = estimate_distribution['rct_a']\n",
+    "    rct_b = estimate_distribution['rct_b']\n",
+    "    kpi_a = estimate_distribution['kpi_a']\n",
+    "    kpi_b = estimate_distribution['kpi_b']\n",
     "    \n",
-    "    pass\n",
+    "    # 使用greedy方法\n",
+    "    is_mts = ((float)mts_a / (mts_a + mts_b) > 0.5 ? 1 : 0)\n",
+    "    is_signal = ((float)signal_a / (signal_a + signal_b) > 0.5 ? 1 : 0)\n",
+    "    is_rct = ((float)rct_a / (rct_a + rct_b) > 0.5 ? 1 : 0)\n",
+    "    is_kpi = ((float)kpi_a / (kpi_a + kpi_b) > 0.5 ? 1 : 0)\n",
+    "    \n",
+    "    if is_mts == 0 and is_signal == 0 and is_rct == 0 and is_kpi == 0:\n",
+    "        is_mts = 1 and is_signal = 1 and is_rct = 1 and is_kpi = 1\n",
+    "    \n",
+    "    ed.update({'mts': is_mts})\n",
+    "    ed.update({'signal': is_signal})\n",
+    "    ed.update({'rct': is_rct})\n",
+    "    ed.update({'kpi': is_kpi})\n",
+    "    \n",
+    "    return ed\n",
+    "    \n",
+    "    \n",
     "\n",
-    "def get_file_freq_distance_from_commit_hsitory():\n",
-    "    # 从提交历史中获得文件之间的提交频率距离\n",
-    "    pass\n",
+    "def get_priori_likelihood_prob(estimate_distribution=[{}], commit_paths=[]):\n",
+    "    total_num = 0\n",
+    "    priori_ed = {}\n",
+    "    likelihood_ed = {}\n",
+    "    class_prob = {}\n",
+    "    \n",
+    "    class_prob = {'mts': 1.0, 'signal': 1.0, 'rct': 1.0, 'kpi': 1.0}\n",
+    "    \n",
+    "    priori_ed = {'mts': 0, 'signal': 0, 'rct': 0, 'kpi': 0}\n",
+    "    \n",
+    "    for path in commit_paths:\n",
+    "        likelihood_ed[path] = {'mts': 0, 'signal': 0, 'rct': 0, 'kpi': 0}\n",
+    "    \n",
+    "    for ed in estimate_distribution:\n",
+    "        \n",
+    "        path = ed['path']\n",
+    "        path_ed = estimate_class_distribution(ed)\n",
+    "        \n",
+    "        total_num += 1\n",
+    "        \n",
+    "        priori_ed['mts'] += path_ed['mts']\n",
+    "        priori_ed['signal'] += path_ed['signal']\n",
+    "        priori_ed['rct'] += path_ed['rct']\n",
+    "        priori_ed['kpi'] += path_ed['kpi']\n",
+    "        \n",
+    "        if path in commit_paths:\n",
+    "            likelihood_ed[path]['mts'] += path_ed['mts']\n",
+    "            likelihood_ed[path]['signal'] += path_ed['signal']\n",
+    "            likelihood_ed[path]['rct'] += path_ed['rct']\n",
+    "            likelihood_ed[path]['kpi'] += path_ed['kpi']\n",
+    "            \n",
+    "    for path in likelihood_ed.keys():\n",
+    "        for c in likelihood_ed[path].keys():\n",
+    "            likelihood_ed[path][c] = ((float)likelihood_ed[path][c] + 1.0 / total_num) / priori_ed[c]\n",
+    "            class_prob[c] = class_prob[c] * likelihood_ed[path][c]\n",
+    "    \n",
+    "    for c in class_prob.keys():\n",
+    "        class_prob[c] = class_prob[c] * ((float)priori_ed[c] / total_num)\n",
+    "        \n",
+    "    return class_prob\n",
     "\n",
-    "def decision_naive_bayes(commit=None):\n",
+    "def argmax_prob(class_prob={}):\n",
+    "    max_prob = -1.0\n",
+    "    max_class = ''\n",
+    "    for c, p in class_prob:\n",
+    "        if p > max_prob:\n",
+    "            max_prob = p\n",
+    "            max_class = c\n",
+    "    return {max_class: max_prob}\n",
+    "\n",
+    "\n",
+    "def decision_naive_bayes(commit=None, estimate_distribution):\n",
     "    # 朴素贝叶斯决策\n",
-    "    # 从esitmate_distribution中得到\n",
-    "    self.commit_id = None\n",
-    "        self.time = None\n",
-    "        self.branch = None\n",
-    "        self.author = None\n",
-    "        self.file_paths = []\n",
-    "        self.comment = \"\"\n",
-    "        self.estimate_feature = \"\"\n",
-    "    pass\n",
+    "    \n",
+    "    file_paths = commit.file_paths\n",
+    "    class_prob = get_priori_likelihood_prob(estimate_distribution, file_paths)\n",
+    "    \n",
+    "    decision = argmax_prob(class_prob)\n",
+    "    \n",
+    "    return decison\n",
+    "    \n",
     "\n",
     "def update_decision_to_commit():\n",
-    "    # 将贝叶斯的预测结果更新到commit历史表的feature字段\n",
+    "    # 将贝叶斯的预测结果更新到commit历史表的estimate_feature字段\n",
     "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### test-main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 制造确定的代码目录\n",
+    "# 将代码目录放入数据库\n",
+    "# 录入先验知识 并 转化为先验分布，以及估计分布\n",
+    "# 从数据库中获取 估计分布"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 输入一个提交\n",
+    "# 作出决策\n",
+    "# 观察人类反馈\n",
+    "# 根据反馈更新估计分布"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 得到估计准确率"
    ]
   },
   {
