--- a/code/ai-do/ai-do-ci-in-smoking/ai-do-smoking.ipynb
+++ b/code/ai-do/ai-do-ci-in-smoking/ai-do-smoking.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,8 @@
     "    # 随机生成\n",
     "    name_len_max = 10\n",
     "    rand_source = \"\".join([chr(i) for i in list(range(97, 122))]) + \"_\"\n",
-    "    rand_name = \"\".join(random.sample(rand_source, random.randint(3,name_len_max)))\n",
+    "    rand_name = \"\".join(random.sample(rand_source, random.randint(3, name_len_max)))\n",
+    "    \n",
     "    if types == \"file\":\n",
     "        rand_suffix = [\".h\", \".cpp\", \".c\", \".txt\"]\n",
     "        rand_name += random.choice(rand_suffix)\n",
@@ -75,7 +76,8 @@
     "def generate_rand_files():\n",
     "    file_nums_max = 1\n",
     "    for _ in range(random.randint(1,file_nums_max)):\n",
-    "        file_name = rand_name(\"file\")\n",
+    "        file_name = rand_name(\"file\") # 随机\n",
+    "        file_name = \"a.cpp\" # 确定\n",
     "        content = \"\"\"\n",
     "#include <iostream>\n",
     "#include <cstdlib>\n",
@@ -113,20 +115,34 @@
     "    \n",
     "def generate_rand_code_dir(code_dir_name=\"code-smoking\", depth=0):\n",
     "    # 随机生成代码目录\n",
-    "    depth_max = 5\n",
-    "    generate_file_prob = 0.4\n",
-    "    dir_nums_max = 5\n",
+    "#     depth_max = 5\n",
+    "#     generate_file_prob = 0.4\n",
+    "#     dir_nums_max = 5\n",
+    "#     if depth > depth_max:\n",
+    "#         return\n",
+    "#     origin_path = os.getcwd()\n",
+    "#     os.mkdir(code_dir_name)\n",
+    "#     os.chdir(code_dir_name)\n",
+    "#     for _ in range(random.randint(2,dir_nums_max)):\n",
+    "#         if random.random() < generate_file_prob or depth == depth_max:\n",
+    "#             generate_rand_files()\n",
+    "#         else:\n",
+    "#             dir_name = rand_name(types=\"dir\")\n",
+    "#             generate_rand_code_dir(dir_name, depth + 1)\n",
+    "#     os.chdir(origin_path)\n",
+    "    \n",
+    "    # 确定生成代码目录\n",
+    "    depth_max = 2\n",
+    "    rand_source = ['a', 'b', 'c']\n",
+    "    rand_suffix = [\".h\", \".cpp\", \".c\", \".txt\"]\n",
     "    if depth > depth_max:\n",
     "        return\n",
     "    origin_path = os.getcwd()\n",
     "    os.mkdir(code_dir_name)\n",
     "    os.chdir(code_dir_name)\n",
-    "    for _ in range(random.randint(2,dir_nums_max)):\n",
-    "        if random.random() < generate_file_prob or depth == depth_max:\n",
-    "            generate_rand_files()\n",
-    "        else:\n",
-    "            dir_name = rand_name(types=\"dir\")\n",
-    "            generate_rand_code_dir(dir_name, depth + 1)\n",
+    "    for dir_name in rand_source:\n",
+    "        generate_rand_code_dir(dir_name, depth + 1)\n",
+    "        generate_rand_files()\n",
     "    os.chdir(origin_path)\n",
     "    return \n"
    ]
@@ -147,11 +163,11 @@
    ],
    "source": [
     "# main-test\n",
-    "print(os.getcwd())\n",
-    "if os.path.exists(\"code-smoking\"):\n",
-    "    shutil.rmtree(\"code-smoking\")\n",
-    "generate_rand_code_dir(code_dir_name=\"code-smoking\", depth=0)\n",
-    "print(os.getcwd())"
+    "# print(os.getcwd())\n",
+    "# if os.path.exists(\"code-smoking\"):\n",
+    "#     shutil.rmtree(\"code-smoking\")\n",
+    "# generate_rand_code_dir(code_dir_name=\"code-smoking\", depth=0)\n",
+    "# print(os.getcwd())"
    ]
   },
   {
@@ -809,11 +825,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\lxb\\lxber-code\\code\\ai-do\\ai-do-ci-in-smoking\n",
+      "D:\\lxb\\lxber-code\\code\\ai-do\\ai-do-ci-in-smoking\n"
+     ]
+    }
+   ],
    "source": [
     "# 制造确定的代码目录\n",
+    "print(os.getcwd())\n",
+    "if os.path.exists(\"code-smoking\"):\n",
+    "    shutil.rmtree(\"code-smoking\")\n",
+    "generate_rand_code_dir(code_dir_name=\"code-smoking\", depth=0)\n",
+    "print(os.getcwd())\n",
+    "\n",
     "# 将代码目录放入数据库\n",
     "# 录入先验知识 并 转化为先验分布，以及估计分布\n",
     "# 从数据库中获取 估计分布"
