--- a/code/RL/rl-systems-perspective/bandit-problem-mathematic-theory.ipynb
+++ b/code/RL/rl-systems-perspective/bandit-problem-mathematic-theory.ipynb
@@ -33,16 +33,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **回报$r_t(i)$**：在第$t$次，玩家摇一次手臂$i$，赌博机随机吐出的金币数量为$r_t(i)$。可见，摇不同手臂，会得到不同的金币数量。对于同一个手臂，在不同的时间摇，也会得到不同数量的金币。那么什么是回报呢？ --- 也就是，回报是定义在不同手臂上的一个随机变量，概率分布，或者随机过程？\n",
+    "> **回报$r_t(i)$**：在第$t$次，玩家摇一次手臂$i$，赌博机随机吐出的金币数量为$r_t(i)$。可见，摇不同手臂，会得到不同的金币数量。对于同一个手臂，在不同的时间摇，也会得到不同数量的金币。那么什么是回报呢？--- 也就是，回报是定义在不同手臂上的一个随机变量，概率分布，或者随机过程？   \n",
+    ">> 如果把摇手臂看作是一次实验，吐出的金币数量即为该次实验结果对应的一个数，那么回报$r_t(i)$就可以看成该实验的一个随机变量。   \n",
     "   \n",
     "> **随机变量**：给定一个实验，实验的所有结果构成实验空间$S$，$S$的子集构成的域称为事件，并对这些事件赋予概率。如果对实验的每个结果$\\xi$指定一个数$\\pmb x(\\xi)$，于是建立了一个定义在$S$集合上的函数$\\pmb x$，该函数的值域为一个数集，如果该函数满足如下两个条件，则称该函数$\\pmb x$为随机变量。    \n",
     ">> 条件I. 对于每个$x$，集合$\\{\\pmb x \\leq x\\}$是一个事件。    \n",
     ">> 条件II. 事件$\\{\\pmb x = +\\infty\\}$和事件$\\{\\pmb x = -\\infty\\}$的概率等于0。即，$$P\\{\\pmb x = +\\infty\\}=0，P\\{\\pmb x = -\\infty\\}=0$$  \n",
     ">> 总之，随机变量$\\pmb x$就是满足上面两个条件的，将每个实验结果$\\xi$指定一个数$\\pmb x(\\xi)$的函数$\\pmb x$。  \n",
     ">> 注：符号$\\{\\pmb x \\leq x\\}$表示$S$的一个子集，因此也是一个事件，由满足$\\pmb x \\leq x$的所有结果$\\xi$组成。  \n",
+    "  \n",
+    "> **随机变量的概率分布**：\n",
+    ">> 要点：**从随机变量的定义来看，随机变量是定义在一个给定的实验的所有结果上的，其本质是一个实验结果与数之间的对应函数。符号$\\{\\pmb x \\leq x\\}$表示满足$\\pmb x \\leq x$的所有结果$\\xi$组成的一个集合，也就表示为一个事件。**   \n",
     "\n",
-    "    \n",
-    "> **随机变量的概率分布**：    \n",
+    ">> 分布函数： $$ F(x) = P\\{\\pmb x \\leq x\\}$$   $$P\\{x_1 < \\pmb x \\leq x_2\\} = F(x_2) - F(x_1)$$    \n",
+    ">> 概率密度函数： $$ f(x) = \\frac{\\mathrm{d} F(x)}{\\mathrm{d} x} = \\lim_{\\Delta x \\rightarrow 0} \\frac{\\mathrm{d} F(x+\\Delta x) - F(x)}{\\mathrm{d} x} = \\lim_{\\Delta x \\rightarrow 0} \\frac{P\\{x < \\pmb x \\leq x + \\Delta x \\}}{\\mathrm{d} x}, f(x) \\geq 0 $$   $$F(x) = \\int ^x_{-\\infty} f(u) {\\rm d}u $$\n",
+    ">> 常见的随机变量类型：   \n",
+    "- 连续型随机变量：均匀分布，正态分布，指数分布，beta分布，伽马分布，卡方分布，...   \n",
+    "- 离散型随机变量：伯努利分布，二项分布，泊松分布，负二项分布，...    \n",
+    ">> 注：   \n",
+    "一般认为很多自然现象都服从正态分布，或者近似为正态分布；beta分布常用在贝叶斯估计中，作为先验分布；伯努利分布是最简单的离散型分布，描述任何只有两个结果的实验或只关心某个事件的出现或不出现的两种结果实验，伯努利随机变量便把这两个结果分别映射为两个不同的值，比如0和1，这两个值描述了事件发生与不发生或者表达成功与失败之类的意义，即$P(x=1)=p,P(x=0)=1-p$，成功概率为$p$，失败概率$1-p$。 如果把n次伯努利实验看成一个实验，那么实验的结果就是某个事件发生或不发生组成的序列，比如4次伯努利实验的一个结果1010，如果存在一个随机变量，把这些0和1组成的序列映射成一个数，这个映射规则为1出现的次数，也表示n次伯努利实验中某个事件发生的次数，那么这样的随机变量就叫做二项式随机变量，其值服从二项式分布。    \n",
+    "\n",
     "> **随机序列**：  \n",
     "> **随机过程**：    "
    ]
