--- a/code/RL/rl-systems-perspective/bandit-problem-mathematic-theory.ipynb
+++ b/code/RL/rl-systems-perspective/bandit-problem-mathematic-theory.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 假设赌博机有$n$个手臂，玩家$Player_A$每摇一次手臂需要花费一枚代币，当玩家$Player_A$花费一枚代币任意摇一次手臂$i$后，赌博机会随机吐出金币的数量为$r_t(i)$，玩家获得这些金币后继续进行下一次的摇手臂动作。这些金币$r_{t}(i)$表示玩家$Player_A$在进行第$t$次动作时去摇手臂$i$获得的回报，摇一次手臂$i$叫做执行一次动作$a_t(i)$，因为赌博机只有$n$个手臂，因此可执行的动作是有限的$n$个动作$a_t(i),i=1,2,...,n$。如果玩家总共只有$T$个代币，那么玩家最多只有$T$次摇手臂的机会，在$T$次动作执行完之后，把所有回报相加就得到累积回报$R_T = \\sum_{t=1}^T r_{t}$。那么很自然地引出多臂赌博机的__基本问题：如何在有限次时间长度$T$的时间序列上去分布这些动作$a_t(i)$，才能获得最大的累积回报$R_T$？__     \n",
+    "> 假设赌博机有$n$个手臂，玩家$Player_A$每摇一次手臂需要花费一枚代币，当玩家$Player_A$花费一枚代币任意摇一次手臂$a$后，赌博机会随机吐出金币的数量为$r_t(a)$，玩家获得这些金币后继续进行下一次的摇手臂动作。这些金币$r_{t}(a)$表示玩家$Player_A$在进行第$t$次动作时去摇手臂$a$获得的回报，摇一次手臂$a$叫做执行一次动作$A_t=a$，因为赌博机只有$n$个手臂，因此可执行的动作是有限的$n$个动作$A_t=a,a=1,2,...,n$。如果玩家总共只有$T$个代币，那么玩家最多只有$T$次摇手臂的机会，在$T$次动作执行完之后，把所有回报相加就得到累积回报$R_T = \\sum_{t=1}^T r_{t}$。那么很自然地引出多臂赌博机的__基本问题：如何在有限次时间长度$T$的时间序列上去分布这些动作$A_t(a)$，才能获得最大的累积回报$R_T$？__     \n",
     "> 为了回答该问题，本文首先对基本问题作进一步地数学解释，然后给出任何算法都不能超越的上下界，并介绍当前的一些算法以及这些算法之间的区别，最后给出一个好的赌博机算法应当具备品质，以及如何寻求新的算法。    "
    ]
   },
@@ -26,16 +26,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 什么是回报与累积回报 - 随机变量，概率分布，随机过程，什么是随机过程？"
+    "## 回报、累积回报与价值函数"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **回报$r_t(i)$**：在第$t$次，玩家摇一次手臂$i$，赌博机随机吐出的金币数量为$r_t(i)$。可见，摇不同手臂，会得到不同的金币数量。对于同一个手臂，在不同的时间摇，也会得到不同数量的金币。那么什么是回报呢？--- 也就是，回报是定义在不同手臂上的一个随机变量，概率分布，或者随机过程？   \n",
-    ">> 如果把摇手臂看作是一次实验，吐出的金币数量即为该次实验结果对应的一个数，那么回报$r_t(i)$就可以看成该实验的一个随机变量。   \n",
-    "   \n",
+    "> **回报函数$r_t(A_t)$**: 回报函数是摇手臂实验的一个随机变量。因为如果把摇手臂看作是一次实验，在第$t$次动作选择中，选择摇手臂$a$的动作记为$A_t=a$，并获得回报为$r_t(A_t=a)$，这个回报即为该次实验结果对应的一个数，实验结果与数的对应规则就被回报函数所规定的。从赌博机外表来看，每个动作执行之后赌博机将会回到开始状态，另一个动作继续从这个开始状态开始，由于我们不知道赌博机内部的细节，也无法确定依次执行的两个动作之间是否对内部的状态有影响，假设这里没有影响。      \n",
+    "\n",
+    "> **累积回报函数$R_T$**: 累积回报是从开始摇手臂到当前这个时间段里获得的所有金币数量的总和，即$R_T = \\sum_{t=1}^T r_{t}$，对于某个动作$a$来说，可以定义该动作的累积回报$R_T(a)$。\n",
+    "$$R_T = \\sum_{t=1}^T r_{t}$$   \n",
+    "$$R_T(a) = \\sum_{t=1}^T r_{t}(A_t=a)$$    \n",
+    "\n",
+    "> **动作的价值函数$q^*(a)$与$Q_t(a)$**: 在第$i$次选择时，选择的动作为$A_i=a$，并获得回报$r_i(A_i=a)$，因为每次执行动作$a$都会获得不同的回报，因此对于动作$a$在每次执行时会存在一个期望回报，这个期望回报称为该动作的价值$q^*(a)$。由于我们只能观察获得回报，因此不能提前预先知道该动作的价值是多少，但是经过$t-1$次选择后，我们可以根据观察结果去估计价值$Q_t(a)$，根据大数定理，只要观察的次数足够多，可以得到该动作的平均回报，用平均回报作为估计的价值$Q_t(a)$，便可以使估计价值$Q_t(a)$非常接近真实价值$q^*(a)$。 对于所有动作来说，最大价值对应的动作为最优动作$A^*$，最大的估计价值对应的动作为当前最优估计动作$A_t^*$。\n",
+    "$$q^*(a)=E[r_t|A_t = a]$$   \n",
+    "$$Q_t(a) = \\frac{1}{N_a}*R_T(a) = \\frac{1}{N_a}*\\sum_{i=1}^{t-1} r_{i}(A_i=a) ，N_a为在时间步t时前t-1次选择中动作a被选择的次数$$   \n",
+    "$$A^* = arg\\max_{a} q^*(a) $$  \n",
+    "$$A_t^* = arg\\max_{a}Q_t(a) $$   \n",
+    "\n",
+    "> **动作$a$的估计价值函数$Q_t(a)$的增量式实现**:    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 累积回报的边界 对应着 选择算法的边界\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  \n",
     "> **概率的公理化定义**:   \n",
     "> **随机变量**：给定一个实验，实验的所有结果构成实验空间$S$，$S$的子集构成的域称为事件，并对这些事件赋予概率。如果对实验的每个结果$\\xi$指定一个数$\\pmb x(\\xi)$，于是建立了一个定义在$S$集合上的函数$\\pmb x$，该函数的值域为一个数集，如果该函数满足如下两个条件，则称该函数$\\pmb x$为随机变量。    \n",
     ">> 条件I. 对于每个$x$，集合$\\{\\pmb x \\leq x\\}$是一个事件。    \n",
@@ -58,6 +85,11 @@
     "> **随机序列**：  \n",
     "> **随机过程**：    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
