--- a/code/RL/rl-systems-perspective/bandit-problem-mathematic-theory.ipynb
+++ b/code/RL/rl-systems-perspective/bandit-problem-mathematic-theory.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "> **动作的价值函数$q^*(a)$与$Q_t(a)$**: 在第$i$次选择时，选择的动作为$A_i=a$，并获得回报$r_i(A_i=a)$，因为每次执行动作$a$都会获得不同的回报，因此对于动作$a$在每次执行时会存在一个期望回报，这个期望回报称为该动作的价值$q^*(a)$。由于我们只能观察获得回报，因此不能提前预先知道该动作的价值是多少，但是经过$t-1$次选择后，我们可以根据观察结果去估计价值$Q_t(a)$，根据大数定理，只要观察的次数足够多，可以得到该动作的平均回报，用平均回报作为估计的价值$Q_t(a)$，便可以使估计价值$Q_t(a)$非常接近真实价值$q^*(a)$。 对于所有动作来说，最大价值对应的动作为最优动作$A^*$，最大的估计价值对应的动作为当前最优估计动作$A_t^*$。\n",
     "$$q^*(a)=E[r_t|A_t = a]$$   \n",
-    "$$Q_t(a) = \\frac{1}{N_a}*R_T(a) = \\frac{1}{N_a}*\\sum_{i=1}^{t-1} r_{i}(A_i=a) ，N_a为在时间步t时前t-1次选择中动作a被选择的次数$$   \n",
+    "$$Q_t(a) = \\frac{1}{N_a}*R_t(a) = \\frac{1}{N_a}*\\sum_{i=1}^{t-1} r_{i}(A_i=a) ，N_a为在时间步t时前t-1次选择中动作a被选择的次数$$   \n",
     "$$A^* = arg\\max_{a} q^*(a) $$  \n",
     "$$A_t^* = arg\\max_{a}Q_t(a) $$   \n",
     "\n",
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
+    "**概率**    \n",
     "> **概率的公理化定义**:   \n",
     "> **随机变量**：给定一个实验，实验的所有结果构成实验空间$S$，$S$的子集构成的域称为事件，并对这些事件赋予概率。如果对实验的每个结果$\\xi$指定一个数$\\pmb x(\\xi)$，于是建立了一个定义在$S$集合上的函数$\\pmb x$，该函数的值域为一个数集，如果该函数满足如下两个条件，则称该函数$\\pmb x$为随机变量。    \n",
     ">> 条件I. 对于每个$x$，集合$\\{\\pmb x \\leq x\\}$是一个事件。    \n",
@@ -81,15 +81,29 @@
     ">> 注：   \n",
     "一般认为很多自然现象都服从正态分布，或者近似为正态分布；beta分布常用在贝叶斯估计中，作为先验分布；伯努利分布是最简单的离散型分布，描述任何只有两个结果的实验或只关心某个事件的出现或不出现的两种结果实验，伯努利随机变量便把这两个结果分别映射为两个不同的值，比如0和1，这两个值描述了事件发生与不发生或者表达成功与失败之类的意义，即$P(x=1)=p,P(x=0)=1-p$，成功概率为$p$，失败概率$1-p$。 如果把n次伯努利实验看成一个实验，那么实验的结果就是某个事件发生或不发生组成的序列，比如4次伯努利实验的一个结果1010，如果存在一个随机变量，把这些0和1组成的序列映射成一个数，这个映射规则为1出现的次数，也表示n次伯努利实验中某个事件发生的次数，那么这样的随机变量就叫做二项式随机变量，其值服从二项式分布。    \n",
     "\n",
-    "> **随机变量函数**：   \n",
-    "> **随机序列**：  \n",
-    "> **随机过程**：    "
+    "> **随机变量函数**：输入为随机变量的函数，输出仍是一个随机变量，概率分布上有什么区别？   \n",
+    "> **随机序列(随机向量)**： 序列的每个维度分量都是一个随机变量  \n",
+    "> **随机过程**：    \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "** 统计 **：\n",
+    "> ** 均值 **:   \n",
+    "> ** 方差 **:  \n",
+    "> ** 置信区间与置信度 **:   \n",
+    "> ** 贝叶斯估计 **:    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** 信息论 **:\n",
+    "> ** 如何判断两个分布之间的差距有多大 **:    "
+   ]
   },
   {
    "cell_type": "markdown",
