增加学习方法的评价函数

--- a/code/RL/rl-systems-perspective/bandit-problem-mathematic-theory.ipynb
+++ b/code/RL/rl-systems-perspective/bandit-problem-mathematic-theory.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 回报、累积回报与价值函数"
+    "## 回报、价值函数与目标函数"
    ]
   },
   {
@@ -46,7 +46,8 @@
     "$$q^*(a)=E[r_t|A_t = a]$$   \n",
     "$$Q_t(a) = \\frac{1}{N_a}*R_t(a) = \\frac{1}{N_a}*\\sum_{i=1}^{t-1} r_{i}(A_i=a) ，N_a为在时间步t时前t-1次选择中动作a被选择的次数$$   \n",
     "$$A^* = arg\\max_{a} q^*(a) $$  \n",
-    "$$A_t^* = arg\\max_{a}Q_t(a) $$   \n",
+    "$$A_t^* = arg\\max_{a}Q_t(a) $$ \n",
+    "$$q^* = arg\\max_{a}q^*(a) $$ \n",
     "\n",
     "> **动作$a$的估计价值函数$Q_t(a)$的样本平均方法的增量式实现**:    \n",
     "$$Q_{n+1} = \\frac{1}{n}*\\sum_{i=1}^{n} r_i = \\frac{1}{n}*(r_1 + r_2 + ...r_{n-1} + r_n) = \\frac{1}{n} * [Q_n*(n-1) + r_n] = Q_n + \\frac{1}{n}*(r_n - Q_n) $$    \n",
@@ -70,7 +71,7 @@
     "1). 假如奖励分布的方差为0，那么只需对每个动作尝试一次便知道哪个动作最好，之后便一直选择这个动作即可。     \n",
     "2). 假如奖励分布的方差不为0，那么需要多次尝试后才能确定出哪个动作最好。    \n",
     "3). 假如两个奖励分布越接近，那么需要的尝试次数越多，有时可能需要无限尝试才能确定。因此问题难点就集中在，尝试多少次后才能确定某个分布比另一个更好。    \n",
-    "4). 从定性角度来说，好的算法应该具有的品格：最大期望回报尝试的次数较少，并对每个方法都有较充分的探索，并在尝试的过程中能及时丢弃掉明显差的方法，并在最好动作被发现之后便一直利用。    \n",
+    "4). 从定性角度来说，好的算法应该具有的品格：尝试的次数较少，并对每个方法都有较充分的探索，并在尝试的过程中能及时丢弃掉明显差的方法，并在最好动作被发现之后便一直利用。    \n",
     "     "
    ]
   },
@@ -78,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** 多臂赌博机的学习方法 **  \n",
+    "## ** 多臂赌博机的学习方法 **  \n",
     "> 用于赌博机的学习方法有几种，这些方法的最本质差别在于选择动作的不同，即探索和利用的平衡方式的不同。 \n",
     "   \n",
     "> ** 随机选择**:   \n",
@@ -88,7 +89,7 @@
     "在随机选择方法上加入了一个$1-\\epsilon$的概率去选择当前最好的动作，因此不再是不加区分地选择每个动作，而是每次选择动作时都会有一个概率去选择最好的动作，因此最好动作被选择的概率为$ 1-\\epsilon + \\frac{\\epsilon}{n} > \\frac{1}{n} $，当$\\epsilon$越小，最好地动作被选择到的概率越大。$\\epsilon$-greedy 选择方法比随机选择方法更好，因为不再无休止地探索动作，而是在探索过程中利用了最好的动作。但该方法也有自身的缺点，因为探索不足可能找到的最好方法不是最好的那个方法。  \n",
     "    \n",
     "> ** 上限置信度选择方法UCB **:     \n",
-    "$$A_t = arg\\max_{a} [Q_t(a) + c\\sqrt \\frac{\\ln(t)}{N_t(a)} ] $$     \n",
+    "$$A_t = arg\\max_{a} [ Q_t(a) + c\\sqrt \\frac{\\ln(t)}{N_t(a)} ] $$     \n",
     "对于UCB方法的理解：  \n",
     "1). 分两部分组成，前者$Q_t(a)$是动作$a$的价值估计,后面$c\\sqrt \\frac{\\ln(t)}{N_t(a)} $是该价值估计的方差或置信区间   \n",
     "2). 对于同一个动作来说，被选择的次数越多说明价值估计越准确，方差越小.    \n",
@@ -98,9 +99,27 @@
     "> ** TS采样方法 **:     \n",
     "将贝叶斯估计方法引入到动作的选择中，对每个动作的价值都建立一个先验的$beta$分布，每次从先验的$beta$分布中采样一个价值，选择最大价值的动作，根据新得到的奖励来更新$beta$分布的$\\alpha$参数和$\\beta$参数，从而得到一个后验$beta$分布。如此重复，直到后验分布的方差越来越小，即收敛到期望价值。    \n",
     "\n",
-    "> ** 乐观初始值的影响 **: 在估计动作每一次的价值函数时，初始值可以随机设置，比如为0。如果初始值设置得比动作的实际价值偏大，那么后面无论选择什么动作获得的奖励都比初始值小，从而鼓励去选择其他动作，从而进行充分的探索，可能开始表现会差，但最终会有好的表现。乐观初始值只是一个小技巧，并不适用与非平稳问题。    \n",
+    "> ** 乐观初始值的影响 **: 在估计动作每一次的价值函数时，初始值可以随机设置，比如为0。如果初始值设置得比动作的实际价值偏大，那么后面无论选择什么动作获得的奖励都比初始值小，从而鼓励去选择其他动作，从而进行充分的探索，可能开始表现会差，但最终会有好的表现。乐观初始值只是一个小技巧，并不适用与非平稳问题。   \n",
+    "    \n",
+    "> ** 学习方法的评价函数 **:  累积遗憾     \n",
+    "累积遗憾来衡量这些方法的好坏，$ regrets=\\sum regret_a(a) $。如果这个方法让你感到无比遗憾和后悔时，那么这个方法对你来说就是不好的方法。遗憾$ regret_t(a) = q^* - q^*(a) $,即当选择动作$a$时，动作a的期望值与所有动作的最优qiwan\n",
     "   "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ** 多臂赌博机实验 **\n",
+    "> 通过多臂赌博机实验来直观感受不同选择方法的效果差异，并帮助更深刻理解这些差异。  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
