增加学习方法的评价函数

--- a/code/RL/rl-systems-perspective/bandit-problem-mathematic-theory.ipynb
+++ b/code/RL/rl-systems-perspective/bandit-problem-mathematic-theory.ipynb
@@ -102,7 +102,7 @@
     "> ** 乐观初始值的影响 **: 在估计动作每一次的价值函数时，初始值可以随机设置，比如为0。如果初始值设置得比动作的实际价值偏大，那么后面无论选择什么动作获得的奖励都比初始值小，从而鼓励去选择其他动作，从而进行充分的探索，可能开始表现会差，但最终会有好的表现。乐观初始值只是一个小技巧，并不适用与非平稳问题。   \n",
     "    \n",
     "> ** 学习方法的评价函数 **:  累积遗憾     \n",
-    "累积遗憾来衡量这些方法的好坏，$ regrets=\\sum regret_a(a) $。如果这个方法让你感到无比遗憾和后悔时，那么这个方法对你来说就是不好的方法。遗憾$ regret_t(a) = q^* - q^*(a) $,即当选择动作$a$时，动作a的期望值与所有动作的最优qiwan\n",
+    "累积遗憾来衡量这些方法的好坏，$ regrets=\\sum regret_a(a) $。如果这个方法让你感到无比遗憾和后悔时，那么这个方法对你来说就是不好的方法。遗憾$ regret_t(a) = q^* - q^*(a) $,即当选择动作$a$时，动作a的期望值与所有动作的最优期望值之间的差距。 \n",
     "   "
    ]
   },
